
$Id: changes.txt,v 1.110 2006/10/24 14:05:22 vvd0 Exp $

MVDSV v0.25 build 2500 (2006.10.25)
----
* disconnect <disconn3ct@users.sourceforge.net>
- field offsets cacheing (ported from ZQuake)
- made localcommand more verbose
- kqueue was disabled on NetBSD and OpenBSD because it don't work


----
MVDSV v0.21-develop build 2480 (2006.10.05)
* disconnect <disconn3ct@users.sourceforge.net>
- Ported from QW262: new command admin - spy'ing on rcon usage
  Can be used only by connected player. When you enable `spy mode' and
  somebody use rcon - you will be noticed. Use rcon admin off to disable spy mode.
- ZQuake's cmodel.c instead of original sv_model.c
- bugfix: banned users can use master_rcon

* jhodge <jhodge@users.sourceforge.net>
- new cvar sv_allowlastscores
  0 - disallow connection less command lastscores
  1 - allow connection less command lastscores
  default: 1
- bugfix from 0.1727: possibility to run master_rcon commands with normal rcon

* VVD <vvd0@users.sourceforge.net>
- 'cmd stopdl' now clear download queue like 'cmd dl \'
- changed internal 'cmd dl <N dots>' - download the Nth to last recorded demo on this server
  after start - work like ktpro's 'cmd dl <N dots>'; limits: 0 < N < 16
(Thanks to B1aze)
- optimized detection of ktpro and added detection of ktpro versions from 1.50 to 1.57
- bugfix from 0.20: qwdtools made "choppy" mvd demos from qwd (disconnect, hello :-))
- improved build number calculation
- bugfix from 0.179: "99% downloaded" - sometimes after downloading client don't rename
  temporary file to real filename and don't hide download bar - show 99% (EXPERIMENTAL)
(Thanks to Renzo)
- bugfix from 0.1726: on *nix '-u <UID>' didn't set uid
(Thanks to mli)
- improved -u and -g (setuid/setgid) support

* qqshka <qqshka@users.sourceforge.net>
- changed QVM API version to 10 due to i've add
  int QVMstrftime( char *valbuff, int sizebuff, const char *fmt, int offset ),